# TeleRAG

./: .gitignore  .gitmodules  Dockerfile  LICENSE  Makefile  README.md  calculate_hit_rate.py  eval_ragacc_4_gpu_nq.py  eval_ragacc_8_gpu.py  eval_ragacc_batch.py  eval_ragacc_nprobe.py  eval_ragacc_single.py  pyproject.toml  requirements.txt
artifact-evaluation/4090/: llama_3b_nprobe.sh
artifact-evaluation/h100/: llama_8b_batch.sh  mistral_22b_batch.sh
artifact-evaluation/h200/: llama_8b_4_gpu_no_schedule.sh  llama_8b_8_gpu.sh
artifact-evaluation/hit_rate/: run_calculate_hit_rate_4090_3b.sh  run_calculate_hit_rate_h100_22b.sh
artifact_evaluation/: README.md  smoke_test.sh
artifact_evaluation/4090/: llama_3b.sh  llama_3b_nprobe.sh  llama_8b.sh
artifact_evaluation/h100/: llama_8b_batch.sh  llama_8b_nprobe.sh  mistral_22b_batch.sh
artifact_evaluation/h200/: llama_8b_4_gpu_no_schedule.sh  llama_8b_4_gpu_prefetch_only.sh  llama_8b_8_gpu.sh
docs/: artifact-evaluation.md
plot_scripts/: README.md  plot_batch.py  plot_h200_schedule_overhead.py  plot_h200_throughput_cache.py  plot_hit_rate_table.py  plot_multi_gpu.py  plot_result_breakdown.py  plot_retrieval_speedup.py  plot_rtx4090.py
ragacc/: README.md  __init__.py  arguments.py  const.py  depre.py  faiss_utils.py  index.py  index_args.py  llm_service.py  llm_serving.py  numa.py  pipeline.py  pipeline_budgets.py  prompt_templates.py  rag_service.py  ragacc.py  retrieval_service.py  schedule.py  services.py  sglang_utils.py  test_utils.py  zmq_utils.py
(+3 files in other folders)
